syntax = "proto3";
package websocket;

// Config is the configuration for the websocket transport.
message Config {
  // NodePeerID constrains the node peer ID.
  // If empty, attaches to whatever node is running.
  string node_peer_id = 1;
  // ListenAddr contains the address to listen on.
  // Has no effect in the browser.
  string listen_addr = 2;
  // DialAddrs contain the addresses to dial on start.
  // Failure to connect is not a fatal error.
  repeated string dial_addrs = 3;
  // CanDial indicates if the transport will respond to Dial directives.
  bool can_dial = 4;
}

// HandshakeExtraData contains the extra data field of the pconn handshake.
message HandshakeExtraData {
  // LocalTransportUuid is the transport uuid of the sender.
  // This is used for monitoring / analysis at a later time.
  // Coorelates the transport connections between two machines.
  uint64 local_transport_uuid = 1;
}
